--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,51 @@
 /*  your css code here. If applicable */
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background-color: #f8f8f8;
+	padding: 20px;
+}
+
+.book-library {
+  background-color: #ffffff;
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+.book-library h1 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.book {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+}
+
+.book img {
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.author {
+  color: #777777;
+  margin: 5px 0 10px 0;
+}
+
+.price-block {
+  background-color: #2ecc71;
+  color: white;
+  padding: 10px;
+  display: inline-block;
+  border-radius: 5px;
+}
