--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 .book {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 30px;
   border-top: 1px solid #eee;
   padding-top: 20px;
@@ -48,4 +49,5 @@ body {
   padding: 10px;
   display: inline-block;
   border-radius: 5px;
+  margin-left: auto;
 }
